Prepare for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <link rel="icon" type="image/svg+xml" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text x="50" y="50" font-size="100" text-anchor="middle" dominant-baseline="middle" fill="DodgerBlue">✈</text></svg>' />
   <title>Live Flight Radar</title>
   <!-- PLEASE ADD HERE YOUR WEB DOMAIN NAME -->
-  <script src="https://www.yourdomainename.com/Build/Cesium/Cesium.js"></script>
+  <script src="Build/Cesium/Cesium.js"></script>
   <!-- PLEASE ADD HERE YOUR WEB DOMAIN NAME -->
-  <link href="https://www.yourdomainename.com/Build/Cesium/Widgets/widgets.css" rel="stylesheet" />
+  <link href="Build/Cesium/Widgets/widgets.css" rel="stylesheet" />
   <link href="index.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 
